# siteship

./: .gitignore  Dockerfile  generate-cert.sh  main.py  pyproject.toml
.github/workflows/: docker-ghcr.yml
elestio/: docker-compose.yaml
src/common/: config.py  logger.py
src/core/: database.py  models.py
src/handlers/: gemini.py  projects.py  snapshot.py  supabase.py  supabase_client.py  telegram.py  vercel.py  whatsapp.py
src/routes/: webhook.py
src/services/: db.py  gemini.py
src/utils/: logger.py  parser.py
tests/: test_webhook_flow.py
tmp/5150220048/: index.html  script.js  style.css
