[project]
name = "siteship-api"
version = "0.1.0"
description = ""
authors = [
    {name = "samrat", email = "samratshakya5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "playwright (>=1.44.0,<2.0.0)",
    "supabase (>=2.16.0,<3.0.0)",
    "python-telegram-bot (>=22.2,<23.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "google-genai (>=1.25.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "twilio (>=9.6.5,<10.0.0)",
]
